<resources>
    <string name="app_name">海颐数字移动开发框架</string>
    <string name="permission_requisite">当前模块缺少必要权限，请打开\"应用详情\"-\"权限\"打开所需权限。</string>
    <string name="permission_rationale">请选择允许权限，否则无法使用本模块。</string>
    <string name="loading_page">启动引导页</string>
    <string name="exit_confirm">再按一次退出应用程序</string>
    <string name="retry">重试</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="denglu">登录</string>
    <string name="title_dashboard">首页</string>
    <string name="title_home">表单</string>
    <string name="title_notifications">动画</string>
    <string name="title_setting">设置</string>
    <string name="quit">退出</string>
    <string name="edit_password">修改密码</string>
    <string name="switch_user">切换用户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
</resources>