<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="headStates"
            type="com.haiyishuzi.haiyishuzijcm.vo.HeadStates" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top"
            layout="@layout/nav_title_center"
            android:layout_alignParentTop="true"
            app:headStates="@{headStates}"
            tools:ignore="IncludeLayoutParam" />


        <androidx.cardview.widget.CardView
            android:id="@+id/edit_password_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_settings_blue_24dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="@string/edit_password"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/switch_user_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_cv" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_person_blue_24dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="@string/switch_user"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_user_cv"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/quit_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_power_settings_new_red_24dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="@string/quit"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>