<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/main_bgcolor"
            android:layout_weight="1"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/bottom_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bgcolor"
            android:paddingTop="5dp">


            <LinearLayout
                android:id="@+id/shouye_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/shouye_iv_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/shouye_iv_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shouye"
                        android:tint="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/shouye_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shouye_white"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/shouye_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_dashboard"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/xiaqu_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/xiaqu_iv_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/xiaqu_iv_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/xiaqu"
                        android:tint="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/xiaqu_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/xiaqu_white"
                        android:tint="@android:color/transparent"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/xiaqu_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_home"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/jixiao_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/jixiao_iv_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/jixiao_iv_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/yingyong"
                        android:tint="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/jixiao_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/yingyong_white"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/jixiao_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_notifications"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/shezhi_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/shezhi_iv_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/shezhi_iv_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shezhi"
                        android:tint="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/shezhi_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shezhi_white"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/shezhi_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>

