<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.haiyishuzi.haiyishuzijcm.vo.Status" />

        <variable
            name="login"
            type="com.haiyishuzi.haiyishuzijcm.vo.Login" />

        <variable
            name="loginResource"
            type="com.haiyishuzi.haiyishuzijcm.vo.Resource" />

        <variable
            name="retryCallback"
            type="com.haiyishuzi.haiyishuzijcm.callBack.RetryCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back_b"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/login_text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <LinearLayout
            android:id="@+id/username_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/username_icon"
                android:scaleType="centerInside" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={login.loginCode}"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/login_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_ll" />

        <LinearLayout
            android:id="@+id/password_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/password_icon"
                android:scaleType="centerInside" />

            <EditText
                android:id="@+id/userpass_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeActionLabel="@string/denglu"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={login.password}"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_color"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/iv_password_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:button="@drawable/iv_password_selector" />
        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/login_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_ll" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <CheckBox
                android:id="@+id/savepass"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:button="@drawable/checkbox"
                android:text="记住密码"
                android:checked="@={login.rememberPassword}"
                android:textColor="@color/login_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="忘记密码？"
                android:textColor="@color/login_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="用户注册"
                android:textColor="@color/login_text_color"
                android:textSize="12sp" />
        </LinearLayout>
        <CheckBox
            android:id="@+id/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@drawable/checkbox"
            android:text="自动登录"
            android:checked="@={login.autoLogin}"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/login_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll1"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/dl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autologin" />

        <include
            android:id="@+id/include"
            layout="@layout/loading_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:callback="@{() -> retryCallback.retry()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resource="@{loginResource}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
